longhorn-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "10000m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - longhorn.gmac.io
    secretName: longhorn-tls
  rules:
  - host: longhorn.gmac.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
