test-ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-http
  namespace: test-app
spec:
  ingressClassName: nginx
  rules:
  - host: hello.gmac.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
